Add index file. Fix bracket escape issue.

--- a/_docs/customize-api.html
+++ b/_docs/customize-api.html
@@ -3,7 +3,7 @@ title: Theme Options – The Customize API
 permalink: /customize-api/
 order: 5
 ---
-
+{% raw %}
 <main id="main" class="site-main theme-handbook type-theme-handbook status-publish has-post-thumbnail hentry type-handbook" role="main">
 			
 <h1>Theme Options – The Customize API</h1>
@@ -964,8 +964,7 @@ add_filter( 'map_meta_cap', 'allow_users_who_can_edit_posts_to_customize', 10, 3
 </pre>
 <p>Note that it is currently necessary to manually add links to the Customizer in the admin menu, admin bar, or elsewhere if you are granting the customize meta capability to non-administrator users.</p>
 
-
 <div class="bottom-of-entry">&nbsp;</div>
 		
 </main>
-
+{% endraw %}
